[gd_scene load_steps=32 format=3 uid="uid://wvc313jlr258"]

[ext_resource type="Script" path="res://scripts/giant.gd" id="1_ja3nj"]
[ext_resource type="Texture2D" uid="uid://0qdpw5ftsgqd" path="res://assets/visual/Player/Run/run 1 contact r.png" id="2_3s6wd"]
[ext_resource type="Texture2D" uid="uid://bqyimsf1yyd4l" path="res://assets/visual/Player/Jump/jump3 down start.png" id="3_lpruc"]
[ext_resource type="Texture2D" uid="uid://d3xb8c0h8axug" path="res://assets/visual/Player/Jump/jump 4 down 1.png" id="4_l8vek"]
[ext_resource type="Texture2D" uid="uid://cvdj2gvlmw84a" path="res://assets/visual/Player/Jump/jump 5 down 2.png" id="5_osf1m"]
[ext_resource type="Texture2D" uid="uid://ca2nobkqka1pw" path="res://assets/visual/Player/Idle/idle 1.png" id="6_jogka"]
[ext_resource type="Texture2D" uid="uid://ct2dsbrq7g4l1" path="res://assets/visual/Player/Idle/idle 2.png" id="7_5fego"]
[ext_resource type="Texture2D" uid="uid://clxncnioxgwdu" path="res://assets/visual/Player/Idle/idle 3.png" id="8_axaxa"]
[ext_resource type="Texture2D" uid="uid://eggcjl1hf5vh" path="res://assets/visual/Player/Idle/idle 4.png" id="9_tqe2j"]
[ext_resource type="Texture2D" uid="uid://bi1wssrqnswc1" path="res://assets/visual/Player/Idle/idle 5.png" id="10_rfix5"]
[ext_resource type="Texture2D" uid="uid://1gyhd0foj12l" path="res://assets/visual/Player/Idle/idle 6.png" id="11_2l5u8"]
[ext_resource type="Texture2D" uid="uid://b54sgbjk6081o" path="res://assets/visual/Player/Idle/idle 7.png" id="12_r3f5c"]
[ext_resource type="Texture2D" uid="uid://cj2sbkdckuqwn" path="res://assets/visual/Player/Idle/idle 8.png" id="13_3rgnv"]
[ext_resource type="Texture2D" uid="uid://drggkcfq7d2g" path="res://assets/visual/Player/Jump/jump 1 prep.png" id="14_5f6yp"]
[ext_resource type="Texture2D" uid="uid://btsg8xwn1i277" path="res://assets/visual/Player/Jump/jump 2 up.png" id="15_63mpx"]
[ext_resource type="Texture2D" uid="uid://3pg0185o3sfc" path="res://assets/visual/Player/Jump/jump 6 land.png" id="16_j464g"]
[ext_resource type="Texture2D" uid="uid://cfahh14lpkgxm" path="res://assets/visual/Player/Run/run 2 down r.png" id="17_8i57x"]
[ext_resource type="Texture2D" uid="uid://dj07ki3ggy01f" path="res://assets/visual/Player/Run/run 3 passing r.png" id="18_evp0e"]
[ext_resource type="Texture2D" uid="uid://7ls877s7gb6g" path="res://assets/visual/Player/Run/run 4 up r.png" id="19_pov6r"]
[ext_resource type="Texture2D" uid="uid://5u4opeqvsbwp" path="res://assets/visual/Player/Run/run 5 contact l.png" id="20_k817b"]
[ext_resource type="Texture2D" uid="uid://crya5syqf67jm" path="res://assets/visual/Player/Run/run 6 down l.png" id="21_dwtn0"]
[ext_resource type="Texture2D" uid="uid://bniidlrp6fggu" path="res://assets/visual/Player/Run/run 7 passing l.png" id="22_n4r6l"]
[ext_resource type="Texture2D" uid="uid://da8706mayjc6e" path="res://assets/visual/Player/Run/run 8 up l.png" id="23_5sebd"]
[ext_resource type="Texture2D" uid="uid://c2u8v31d2dr8f" path="res://assets/visual/glow.png" id="24_to41y"]

[sub_resource type="Animation" id="Animation_eyelu"]
resource_name = "fall"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [ExtResource("3_lpruc"), ExtResource("4_l8vek"), ExtResource("5_osf1m")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-200, -120)]
}

[sub_resource type="Animation" id="Animation_xrnbb"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [ExtResource("6_jogka"), ExtResource("7_5fego"), ExtResource("8_axaxa"), ExtResource("9_tqe2j"), ExtResource("10_rfix5"), ExtResource("11_2l5u8"), ExtResource("12_r3f5c"), ExtResource("13_3rgnv")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-200, 15)]
}

[sub_resource type="Animation" id="Animation_pan2y"]
resource_name = "jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [ExtResource("14_5f6yp"), ExtResource("15_63mpx")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -120)]
}

[sub_resource type="Animation" id="Animation_4xkir"]
resource_name = "land"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [ExtResource("16_j464g")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-80, -120)]
}

[sub_resource type="Animation" id="Animation_086pm"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [ExtResource("2_3s6wd"), ExtResource("17_8i57x"), ExtResource("18_evp0e"), ExtResource("19_pov6r"), ExtResource("20_k817b"), ExtResource("21_dwtn0"), ExtResource("22_n4r6l"), ExtResource("23_5sebd")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-50, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fuo3l"]
_data = {
"fall": SubResource("Animation_eyelu"),
"idle": SubResource("Animation_xrnbb"),
"jump": SubResource("Animation_pan2y"),
"land": SubResource("Animation_4xkir"),
"run": SubResource("Animation_086pm")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x5633"]
size = Vector2(23.958, 79.78)

[node name="Giant" type="CharacterBody2D"]
collision_mask = 15
floor_constant_speed = true
script = ExtResource("1_ja3nj")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 2
z_as_relative = false
position = Vector2(2.542, 14.56)
scale = Vector2(0.124, 0.124)
texture = ExtResource("16_j464g")
offset = Vector2(-80, -120)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_fuo3l")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 28.89)
shape = SubResource("RectangleShape2D_x5633")

[node name="ShieldTimer" type="Timer" parent="."]
one_shot = true

[node name="ShieldCooldownTimer" type="Timer" parent="."]

[node name="FlinchTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Smoke" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 0, 0, 0.443137)
self_modulate = Color(0.329412, 0.207843, 0.443137, 0.419608)
texture = ExtResource("24_to41y")

[connection signal="animation_finished" from="Sprite2D/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="ShieldTimer" to="." method="_on_shield_timer_timeout"]
[connection signal="timeout" from="ShieldCooldownTimer" to="." method="_on_shield_cooldown_timer_timeout"]
[connection signal="timeout" from="FlinchTimer" to="." method="_on_flinch_timer_timeout"]
